--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
             />
             <a
               style="text-decoration: none; color: #000"
-              href="mailto: tobotechalloysinc@gmail.com"
-              >tobotechalloysinc@gmail.com</a
+              href="mailto: tubotechalloysinc@gmail.com"
+              >tubotechalloysinc@gmail.com</a
             >
             <!-- <span>|</span>
             <img
